--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,8 @@
+@import 'reset.scss';
+@import 'const.scss';
 @import 'components/fireflies.scss';
+@import 'components/fallingtext.scss';
+@import 'components/trailedtext.scss';
 
 * {
   padding: 0;
@@ -13,10 +17,25 @@ body {
   padding: 0;
   margin: 0;
   height: 100vh;
-  background-color: #343434;
+  background-color: $bgColor;
   color: white;
 }
 
 .green {
-  color: #14CE3D;
+  color: $primary;
+}
+
+.window {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#home-title {
+  text-align: center;
+  h1 {
+    font-size: 60px;
+  }
 }
