--- a/style.css
+++ b/style.css
@@ -1,3 +1,57 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: "";
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
 .animation-wrapper {
   height: 100vh;
   width: 100%;
@@ -63,6 +117,190 @@
     background-color: #fff;
   }
 }
+.falling-title {
+  transform: translate3d(0, 0, 0) rotate(0);
+  animation: shake 1s forwards ease-in;
+  animation-delay: 2.45s;
+}
+.falling-title span {
+  display: inline-block;
+  transform: translateY(-100vh);
+  animation: fall 0.8s forwards ease-in-out;
+}
+.falling-title span.animation-delayed {
+  transform: translateY(-300vh) rotate(0);
+  animation: fallAndShake 1s forwards ease-in;
+}
+.falling-title span:nth-child(1):not(.animation-delayed) {
+  animation-delay: 0.1s;
+}
+.falling-title span.animation-delayed {
+  animation-delay: 0.4s;
+}
+.falling-title span:nth-child(2):not(.animation-delayed) {
+  animation-delay: 0.2s;
+}
+.falling-title span.animation-delayed {
+  animation-delay: 0.5s;
+}
+.falling-title span:nth-child(3):not(.animation-delayed) {
+  animation-delay: 0.3s;
+}
+.falling-title span.animation-delayed {
+  animation-delay: 0.6s;
+}
+.falling-title span:nth-child(4):not(.animation-delayed) {
+  animation-delay: 0.4s;
+}
+.falling-title span.animation-delayed {
+  animation-delay: 0.7s;
+}
+.falling-title span:nth-child(5):not(.animation-delayed) {
+  animation-delay: 0.5s;
+}
+.falling-title span.animation-delayed {
+  animation-delay: 0.8s;
+}
+.falling-title span:nth-child(6):not(.animation-delayed) {
+  animation-delay: 0.6s;
+}
+.falling-title span.animation-delayed {
+  animation-delay: 0.9s;
+}
+.falling-title span:nth-child(7):not(.animation-delayed) {
+  animation-delay: 0.7s;
+}
+.falling-title span.animation-delayed {
+  animation-delay: 1s;
+}
+.falling-title span:nth-child(8):not(.animation-delayed) {
+  animation-delay: 0.8s;
+}
+.falling-title span.animation-delayed {
+  animation-delay: 1.1s;
+}
+.falling-title span:nth-child(9):not(.animation-delayed) {
+  animation-delay: 0.9s;
+}
+.falling-title span.animation-delayed {
+  animation-delay: 1.2s;
+}
+.falling-title span:nth-child(10):not(.animation-delayed) {
+  animation-delay: 1s;
+}
+.falling-title span.animation-delayed {
+  animation-delay: 1.3s;
+}
+.falling-title span:nth-child(11):not(.animation-delayed) {
+  animation-delay: 1.1s;
+}
+.falling-title span.animation-delayed {
+  animation-delay: 1.4s;
+}
+.falling-title span:nth-child(12):not(.animation-delayed) {
+  animation-delay: 1.2s;
+}
+.falling-title span.animation-delayed {
+  animation-delay: 1.5s;
+}
+.falling-title span:nth-child(13):not(.animation-delayed) {
+  animation-delay: 1.3s;
+}
+.falling-title span.animation-delayed {
+  animation-delay: 1.6s;
+}
+.falling-title span:nth-child(14):not(.animation-delayed) {
+  animation-delay: 1.4s;
+}
+.falling-title span.animation-delayed {
+  animation-delay: 1.7s;
+}
+.falling-title span:nth-child(15):not(.animation-delayed) {
+  animation-delay: 1.5s;
+}
+.falling-title span.animation-delayed {
+  animation-delay: 1.8s;
+}
+
+@keyframes fall {
+  100% {
+    transform: translateY(0);
+  }
+}
+@keyframes fallAndShake {
+  1% {
+    transform: rotate(0) translateY(10);
+  }
+  30% {
+    transform: rotate(0) translateY(10);
+  }
+  65% {
+    transform: rotate(-30deg) translateY(0);
+  }
+  90% {
+    transform: rotate(-25deg) translateY(0);
+  }
+  100% {
+    transform: rotate(0) translateY(0);
+  }
+}
+@keyframes shake {
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0) rotate(1deg);
+  }
+  20%, 80% {
+    transform: translate3d(2px, 0, 0) rotate(3deg);
+  }
+  30%, 50%, 70% {
+    transform: translate3d(-4px, 0, 0) rotate(5deg);
+  }
+  40%, 60% {
+    transform: translate3d(4px, 0, 0);
+  }
+}
+.trailed-text {
+  position: relative;
+  width: fit-content;
+  margin: auto;
+  transform: translateY(-60vh);
+  animation: trailed 2.5s forwards;
+  animation-delay: 2.5s;
+}
+.trailed-text .rope {
+  height: 60vh;
+  width: 9px;
+  border-radius: 5px;
+  background: url(https://public.agriconomie.com/imgbin_rope-euclidean-drawing-png.png) repeat 0 0 transparent;
+  background-size: contain;
+  position: absolute;
+  top: 0;
+  transform: translateY(-58.5vh);
+  animation: trailedReverse 0.8s forwards ease-in;
+  animation-delay: 5s;
+}
+.trailed-text .rope:first-child {
+  left: 0.1rem;
+}
+.trailed-text .rope:last-child {
+  right: 0.1rem;
+}
+
+@keyframes trailed {
+  90% {
+    transform: translateY(2px);
+  }
+  95% {
+    transform: translateY(-1px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+@keyframes trailedReverse {
+  100% {
+    transform: translateY(-120vh);
+  }
+}
 * {
   padding: 0;
   margin: 0;
@@ -82,6 +320,21 @@ body {
 
 .green {
   color: #14CE3D;
+}
+
+.window {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#home-title {
+  text-align: center;
+}
+#home-title h1 {
+  font-size: 60px;
 }
 
 /*# sourceMappingURL=style.css.map */
