--- a/scss/components/trailedtext.scss
+++ b/scss/components/trailedtext.scss
@@ -1,10 +1,14 @@
 .trailed-text {
   position: relative;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
   margin: auto;
   transform: translateY(-60vh);
-  animation: trailed 2.5s forwards;
-  animation-delay: 2.5s;
+  -webkit-animation: trailed 2.5s forwards;
+          animation: trailed 2.5s forwards;
+  -webkit-animation-delay: 2.5s;
+          animation-delay: 2.5s;
 
   .rope {
     height: 60vh;
@@ -16,8 +20,10 @@
     position: absolute;
     top: 0;
     transform: translateY(-58.5vh);
-    animation: trailedReverse .8s forwards ease-in;
-    animation-delay: 5s;
+    -webkit-animation: trailedReverse .8s forwards ease-in;
+            animation: trailedReverse .8s forwards ease-in;
+    -webkit-animation-delay: 5s;
+            animation-delay: 5s;
 
     &:first-child {
       left: .1rem;
@@ -25,6 +31,20 @@
     &:last-child {
       right: .1rem;
     }
+  }
+}
+
+@-webkit-keyframes trailed {
+  90% {
+    transform: translateY(2px);
+  }
+
+  95% {
+    transform: translateY(-1px);
+  }
+
+  100% {
+    transform: translateY(0)
   }
 }
 
@@ -39,6 +59,12 @@
 
   100% {
     transform: translateY(0)
+  }
+}
+
+@-webkit-keyframes trailedReverse {
+  100% {
+    transform: translateY(-120vh);
   }
 }
 
