--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 @import 'reset.scss';
 @import 'const.scss';
 @import 'components/fireflies.scss';
+@import 'components/particles.scss';
 @import 'components/fallingtext.scss';
 @import 'components/trailedtext.scss';
 
